--- a/deploy/index.html
+++ b/deploy/index.html
@@ -1,19 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <!--Google Font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+</head>
 <body>
     <header>
-        <div>
+        <section id="header-logo">
             <a href="#">
                 <img src="img/Logo.svg" alt="logo">
             </a>
-        </div>
-        <div>
-            <a href="#">Buy Tickets</a>
-            <a href="#">View The Collection</a>
-            <a href="#">Donate</a>
-        </div>
-    
+        </section>
+        <section id="header-links">
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#">Buy Tickets</a>
+                    </li>
+                    <li>
+                        <a href="#">View The Collection</a>
+                    </li>
+                    <li>
+                        <a href="#">Donate</a>
+                    </li>
+                </ul>
+            </nav>
+        </section>
     </header>
     <section id="Hero">
             <div><img src="img/Kapoor-Motion-P1-herospot.jpg" alt="Girl in Museum looking at a painting"></div>
