Flexbox and grid for herospot

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -9,38 +9,53 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Prata&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" href="css/styles.css">
+<title>Kapoor-Motion-P1</title>
 </head>
 <body>
     <header>
-        <section id="header-logo">
-            <a href="#">
-                <img src="img/Logo.svg" alt="logo">
-            </a>
-        </section>
-        <section id="header-links">
-            <nav>
-                <ul>
-                    <li>
-                        <a href="#">Buy Tickets</a>
-                    </li>
-                    <li>
-                        <a href="#">View The Collection</a>
-                    </li>
-                    <li>
-                        <a href="#">Donate</a>
-                    </li>
-                </ul>
-            </nav>
-        </section>
+        <div>
+            <aside>
+                <a href="#">
+                    <img src="img/Logo.svg" alt="logo">
+                </a>
+            </aside>
+            <section id="header-links">
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="#">Buy Tickets</a>
+                        </li>
+                        <li>
+                            <a href="#">View The Collection</a>
+                        </li>
+                        <li>
+                            <a href="#">Donate</a>
+                        </li>
+                    </ul>
+                </nav>
+            </section>
+        </div>
     </header>
-    <section id="Hero">
-            <div><img src="img/Kapoor-Motion-P1-herospot.jpg" alt="Girl in Museum looking at a painting"></div>
-            <h1>Experience Art.</h1>
-            <div><img src="img/Logo-Silhouette.svg" alt="Logo Silhouette"></div>
+    <section id="hero">
+            <div>
+                <article id="experienceart">
+                    <section>
+                     <h1>Experience Art.</h1>
+                    </section>
+                </article>
+                <article id="herologo">
+                    <section>
+                        <img src="img/Logo-Silhouette.svg" alt="Logo Silhouette">
+                    </section>
+                </article>
+            </div>
         </section>
     <section id="content">
-                <h1>Art Museum</h1>
             <div>
+                <h1>Art Museum</h1>
                 <p>Enjoy two-day access to the Philadelphia Museum of Art and the Rodin Museum with a general admission ticket.</p>
                 <p>Advance reservations are strongly recommended. Tickets are available for entry for each half-hour time slot, up to four weeks in advance of today’s date, with new tickets released every Tuesday.</p>
                 <p>Enjoy Pay What You Wish admission on the first Sunday of the month and every Friday night (5:00–8:45 p.m.). Free admission for PA ACCESS & EBT cardholders and their family members.</p>
