Animation and css fixes

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -16,28 +16,16 @@
 </head>
 <body>
     <header>
-        <div>
-            <aside>
-                <a href="#">
-                    <img src="img/Logo.svg" alt="logo">
-                </a>
-            </aside>
-            <section id="header-links">
-                <nav>
-                    <ul>
-                        <li>
-                            <a href="#">Buy Tickets</a>
-                        </li>
-                        <li>
-                            <a href="#">View The Collection</a>
-                        </li>
-                        <li>
-                            <a href="#">Donate</a>
-                        </li>
-                    </ul>
-                </nav>
-            </section>
+        <div id="logo">
+            <a href="#">
+                <img src="img/Logo.svg" alt="logo">
+            </a>
         </div>
+        <nav id="nav">
+            <a href="#" id="nav1">Buy Tickets</a>
+            <a href="#" id="nav2">View The Collection</a>
+            <a href="#" id="nav3">Donate</a>
+        </nav>
     </header>
     <section id="hero">
             <div>
@@ -61,5 +49,6 @@
                 <p>Enjoy Pay What You Wish admission on the first Sunday of the month and every Friday night (5:00–8:45 p.m.). Free admission for PA ACCESS & EBT cardholders and their family members.</p>
             </div>
             </section>
+    <script type="module" src="js/scripts-min.js"></script>
 </body>
 </html>
