Optimized SVG and imported DrawSVG

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -49,58 +49,40 @@
                 <p>Enjoy Pay What You Wish admission on the first Sunday of the month and every Friday night (5:00–8:45 p.m.). Free admission for PA ACCESS & EBT cardholders and their family members.</p>
             </div>
             </section>
-    <section>
-                    <svg width="250" height="250" viewBox="0 0 250 250" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <g clip-path="url(#clip0_2:85)">
-                        <path d="M248.88 248.89L248.88 0.699997L0.690002 0.699997L0.690002 248.89L248.88 248.89Z" stroke="#D07F2C" stroke-width="1.4" stroke-miterlimit="10"/>
+    <section id="preloader">
+                    <svg fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 900">
+                        <g id="Preloader" clip-path="url(#clip0_2:2)">
+                          <path fill="#fff" d="M0 0h1440v900H0z"/>
+                          <path id="background" d="M1440 0H0v900h1440V0Z" fill="#E8C197" stroke="#D07F2C" stroke-width="1.4" stroke-miterlimit="10"/>
+                          <path id="innerframe" d="M833.12 336H606v228.26h227.12V336Z" stroke="#D07F2C" stroke-width="2" stroke-miterlimit="10"/>
+                          <path id="outerframe" d="M844 573.89V325.7H595.81v248.19H844Z" stroke="#D07F2C" stroke-width="2" stroke-miterlimit="10"/>
+                          <g id="painting1" stroke="#D07F2C" stroke-miterlimit="10">
+                            <path id="line17" d="M724.06 519.03c3.26-5.42 4.52-6 7.24-5.24" stroke-width="2" stroke-linecap="round" class="painting1class"/>
+                            <path id="line16" d="M717.37 508c6.87 4 7.78 4 5.61 7.6l-2.17 3.61" stroke-width="2" stroke-linecap="round" class="painting1class"/>
+                            <path id="line15" d="M723.34 486.49a21.419 21.419 0 0 0 4.88 7.59" stroke-width="2" stroke-linecap="round" class="painting1class"/>
+                            <path id="line14" d="M720.81 502.58a10.458 10.458 0 0 1 4.88-5.06" stroke-width="2" stroke-linecap="round" class="painting1class"/>
+                            <path id="line13" d="M715.93 489.2c3.61 4.16 3.25 7.59.54 11.39-.83 1.16-1.92 2.74-.08 3.47a40.637 40.637 0 0 0 8.7 2.79c3.72.57 9.77.85 12.71-2.1 2.54-2.53 5.79-3.62 8-2.17 2.21 1.45 2.17 4.52 2.71 7.05.54 2.53 2 6.69 2 6.69" stroke-width="2" stroke-linecap="round"/>
+                            <path id="line12" d="M711.6 496.61c1.26 2.9 4.88 4 4.88 4" stroke-width="2" stroke-linecap="round" class="painting1class"/>
+                            <path id="line11" d="M706.89 493.36c1.63-5.24 6-5.42 6-5.42" stroke-width="2" stroke-linecap="round" class="painting1class"/>
+                            <path id="line10" d="M701.46 494.81c4.52-5.25 5.43-7.24 2.35-8" stroke-width="2" stroke-linecap="round" class="painting1class"/>
+                            <path id="line9" d="M694.96 504.39c0-2.89 1.26-1.45 5.24-1.27 3.98.18 5.42 1.09 6.87-.9" stroke-width="2" stroke-linecap="round" class="painting1class"/>
+                            <path id="line8" d="m683.6 484.91 1.62 2.35" stroke-width="2" stroke-linecap="round"/>
+                            <path id="line7" d="M681.4 496.43c1.62-4.16 2.89-4.52.54-7.05a11.004 11.004 0 0 1-2.71-5.6" stroke-width="2" stroke-linecap="round"/>
+                            <path id="line6" d="M673.98 494.81c2.35-2.35 2.72 6.32 8.14 5.42 5.42-.9 7.41-.36 8.68 2.71 1.27 3.07 2.53 7.41 1.44 9.95" stroke-width="2" stroke-linecap="round"/>
+                            <path id="line5" d="M832.29 489.91s-26.36-3.55-32.32 7.51c0 0-1.86 4.19-2.28 12.76-.2 4.15.7 13.83-5.81 12.88a2.463 2.463 0 0 1-2.22-2.16 3.397 3.397 0 0 1 .49-1.56c2.12-4.18 3.48-8.34 3.18-13-.06-.889-.06-1.781 0-2.67a6.713 6.713 0 0 0-4.21-6.78 14.49 14.49 0 0 1-4.76-3c-5.57-5.26-17.68 19-19.07 22.19a4.054 4.054 0 0 1-2.51 2 2.401 2.401 0 0 1-2.57-1.53c-.59-1.56.22-3.25 1.33-4.45 2.31-2.48 4.76-4.36 5.8-7.8.76-2.48 1.09-5.07 2-7.49.69-1.79 2.59-3.13 3-5 .41-1.87-.68-3.56-.37-5.45.57-3.57 2.66-6.49 3.66-9.91a16.506 16.506 0 0 0-3.08-15c-1.23-1.48-2.92-2.82-4.84-2.76-2.64.08-4.42 2.61-6.26 4.51a27.21 27.21 0 0 1-7.77 5.26 15.849 15.849 0 0 1-6 1.89 6.493 6.493 0 0 1-3.083-.467 6.495 6.495 0 0 1-2.507-1.853 1.58 1.58 0 0 1-.31-.65 1.926 1.926 0 0 1 .65-1.43 27.82 27.82 0 0 0 6.39-19.75 2.277 2.277 0 0 0-.747-2.008 2.273 2.273 0 0 0-2.083-.502c-4.61.08-9.26 1.36-13.76.38-6.3-1.36-11.06-7.64-11-14a.177.177 0 0 1 .064-.099.179.179 0 0 1 .286.099c1.43 6.29 9.8 9.79 9.8 9.79a17.938 17.938 0 0 0 15.34-.59 10.58 10.58 0 0 1 9.61-8.31c.73-1.67-.3-3.71-1.86-4.66a10.235 10.235 0 0 0-4.91-1.65c-5.1-.26-12 2.33-15.71-2.08a.596.596 0 0 1-.093-.666.6.6 0 0 1 .583-.334c6 .2 13.9-.8 19.41-.63 7.38.22 10.25 6.78 9.41 14.6a36.773 36.773 0 0 1 3-10.69 1.85 1.85 0 0 1 1.81-1.17c1.13.13 1.41 1.36 1.42 2.38 0 1.42.15 2.92.09 4.35a2.427 2.427 0 0 0 .939 2.011 2.435 2.435 0 0 0 2.181.409c1.13-.32 2.15-.59 2.62-.77 2.51-.95 5-2 7.5-2.9a71.312 71.312 0 0 1 15.52-4.25c7.95-1.07 14.47 1.43 22.07 3 4 .85 8.51.9 12-1.28" stroke-width="2" stroke-linecap="round"/>
+                            <path id="line5_2" d="M683.04 436.03c10.36-3.75 11.83-8 11.71-12.11-.17-5.7 7.6-14.86 14.34-15.72 6.74-.86 8-.68 9.26-2.24 1.26-1.56.84 2.51 1.11 5 .27 2.49 6.39 7.78 7.6 8.82s.35 3.11-2.59 2.59-7.6-3.28-8.64-3.63c-5.18 7.26.17 19 .17 19" stroke-width="2" stroke-linecap="round"/>
+                            <path id="line4" d="M628.34 498.76c4.74 4.54 14.4 7.58 18.75 7.39 4.35-.19 3.8 11.93 4 14.39l7.19-.19c-.42-3.35-2-6.7-1.72-10.13.27-3.17 2.48-5.36 4.47-7.61 2.58-2.9 5.72-5.83 7.74-9.15 2.82-4.64 1.75-10.72.47-15.68a2.474 2.474 0 0 1-.11-1 1.685 1.685 0 0 1 1.4-1.24c3.18-.57 7 1.46 10.06 2.11 6.09 1.27 14.31 3.44 18.64-2.44.229-.265.384-.586.45-.93.16-1.53-2.93-2.44-4-3.05a53.504 53.504 0 0 1-11.23-9.18c-2.38-2.5-5.23-4.91-6.69-8.11-1.58-3.46.38-6.76 1.93-9.8 4.13-8.09 4.22-16.09 3.57-24.95 0-.34-.13-.77-.47-.81a.798.798 0 0 0-.41.13c-2.66 1.62-2.48 5-2.54 7.69a43.177 43.177 0 0 1-2.09 12.71" stroke-width="2" stroke-linecap="round"/>
+                            <path id="line3" d="M606 450.85c20.83-2.28 26.51-10.23 33.33-8.34 6.82 1.89 7.57 6.82 11.74 8 4.17 1.18 1.32-3-1.14-6.25s-1-5.12 5.11-.57c0-11 14.4-20.83 17.62-22.16 3.22-1.33 3.6 1.33 1.32 3.79 0 0-16.66 8.52-15.34 20.83 10-3.6 13.64-.75 13.64-.75 1.62 1 3.85-2.55 5.47-6.42" stroke-width="2"/>
+                            <path id="line2" d="M606.12 425.26c63.63 9.09 79.92-39.39 101.13-33.71 21.21 5.68 39.77-6.81 42.8-6.81" stroke-width="2"/>
+                            <path id="line1" d="M610.85 528.91c75.57-22.15 71.51 6.5 126.51 10.35 52.42 3.68 88.27-9.47 95.95-13.91" stroke-width="1.4" stroke-linecap="round"/>
+                          </g>
                         </g>
                         <defs>
-                        <clipPath id="clip0_2:85">
-                        <rect width="249.59" height="249.59" fill="white"/>
-                        </clipPath>
+                          <clipPath id="clip0_2:2">
+                            <path fill="#fff" d="M0 0h1440v900H0z"/>
+                          </clipPath>
                         </defs>
-                        </svg>
-                        <svg width="229" height="230" viewBox="0 0 229 230" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <g clip-path="url(#clip0_2:128)">
-                            <path d="M226.82 154.91C226.82 154.91 200.46 151.36 194.5 162.42C194.5 162.42 192.64 166.61 192.22 175.18C192.02 179.33 192.92 189.01 186.41 188.06C185.848 188.009 185.321 187.766 184.917 187.373C184.513 186.98 184.256 186.46 184.19 185.9C184.224 185.348 184.392 184.812 184.68 184.34C186.8 180.16 188.16 176 187.86 171.34C187.8 170.451 187.8 169.559 187.86 168.67C187.976 167.238 187.63 165.807 186.873 164.586C186.115 163.366 184.985 162.421 183.65 161.89C181.883 161.211 180.265 160.191 178.89 158.89C173.32 153.63 161.21 177.89 159.82 181.08C159.56 181.567 159.203 181.995 158.772 182.339C158.34 182.683 157.843 182.935 157.31 183.08C156.772 183.154 156.224 183.042 155.757 182.764C155.291 182.486 154.932 182.058 154.74 181.55C154.15 179.99 154.96 178.3 156.07 177.1C158.38 174.62 160.83 172.74 161.87 169.3C162.63 166.82 162.96 164.23 163.87 161.81C164.56 160.02 166.46 158.68 166.87 156.81C167.28 154.94 166.19 153.25 166.5 151.36C167.07 147.79 169.16 144.87 170.16 141.45C170.896 138.887 171.001 136.184 170.464 133.571C169.928 130.959 168.767 128.516 167.08 126.45C165.85 124.97 164.16 123.63 162.24 123.69C159.6 123.77 157.82 126.3 155.98 128.2C153.714 130.39 151.085 132.17 148.21 133.46C146.356 134.485 144.316 135.127 142.21 135.35C141.16 135.447 140.102 135.287 139.127 134.883C138.153 134.478 137.293 133.842 136.62 133.03C136.468 132.84 136.362 132.618 136.31 132.38C136.312 132.109 136.371 131.842 136.483 131.596C136.595 131.35 136.757 131.129 136.96 130.95C141.558 125.438 143.848 118.361 143.35 111.2C143.4 110.83 143.357 110.453 143.227 110.103C143.097 109.753 142.882 109.44 142.603 109.192C142.323 108.944 141.987 108.768 141.624 108.681C141.261 108.593 140.882 108.597 140.52 108.69C135.91 108.77 131.26 110.05 126.76 109.07C120.46 107.71 115.7 101.43 115.76 95.07C115.769 95.0307 115.792 94.9958 115.824 94.9708C115.855 94.9457 115.895 94.9321 115.935 94.9321C115.975 94.9321 116.015 94.9457 116.046 94.9708C116.078 94.9958 116.1 95.0307 116.11 95.07C117.54 101.36 125.91 104.86 125.91 104.86C128.351 105.903 130.993 106.392 133.646 106.29C136.299 106.188 138.896 105.498 141.25 104.27C141.736 102.031 142.936 100.011 144.669 98.512C146.402 97.0134 148.574 96.1179 150.86 95.96C151.59 94.29 150.56 92.25 149 91.3C147.532 90.3379 145.841 89.7697 144.09 89.65C138.99 89.39 132.09 91.98 128.38 87.57C128.3 87.481 128.248 87.3701 128.231 87.2514C128.215 87.1328 128.234 87.0119 128.287 86.9044C128.34 86.7968 128.423 86.7075 128.527 86.6479C128.631 86.5883 128.751 86.5612 128.87 86.57C134.87 86.77 142.77 85.77 148.28 85.94C155.66 86.16 158.53 92.72 157.69 100.54C158.143 96.8454 159.155 93.241 160.69 89.85C160.832 89.4903 161.082 89.1841 161.407 88.9742C161.732 88.7644 162.114 88.6615 162.5 88.68C163.63 88.81 163.91 90.04 163.92 91.06C163.92 92.48 164.07 93.98 164.01 95.41C163.996 95.7956 164.073 96.1791 164.237 96.5288C164.4 96.8784 164.644 97.1841 164.949 97.4206C165.254 97.6572 165.611 97.8176 165.99 97.8888C166.369 97.96 166.76 97.9398 167.13 97.83C168.26 97.51 169.28 97.24 169.75 97.06C172.26 96.11 174.75 95.06 177.25 94.16C182.246 92.1625 187.453 90.7367 192.77 89.91C200.72 88.84 207.24 91.34 214.84 92.91C218.84 93.76 223.35 93.81 226.84 91.63" stroke="#D07F2C" stroke-width="1.4" stroke-miterlimit="10" stroke-linecap="round"/>
-                            <path d="M77.5699 101.03C87.9299 97.28 89.3999 93.03 89.2799 88.92C89.1099 83.22 96.8799 74.06 103.62 73.2C110.36 72.34 111.62 72.52 112.88 70.96C114.14 69.4 113.72 73.47 113.99 75.96C114.26 78.45 120.38 83.74 121.59 84.78C122.8 85.82 121.94 87.89 119 87.37C116.06 86.85 111.4 84.09 110.36 83.74C105.18 91 110.53 102.74 110.53 102.74" stroke="#D07F2C" stroke-width="1.4" stroke-miterlimit="10" stroke-linecap="round"/>
-                            <path d="M117.87 151.49C118.939 154.338 120.603 156.925 122.75 159.08" stroke="#D07F2C" stroke-width="1.4" stroke-miterlimit="10" stroke-linecap="round"/>
-                            <path d="M95.99 159.81C100.51 154.56 101.42 152.57 98.34 151.81" stroke="#D07F2C" stroke-width="1.4" stroke-miterlimit="10" stroke-linecap="round"/>
-                            <path d="M101.42 158.36C103.05 153.12 107.42 152.94 107.42 152.94" stroke="#D07F2C" stroke-width="1.4" stroke-miterlimit="10" stroke-linecap="round"/>
-                            <path d="M111.9 173C118.77 177 119.68 177 117.51 180.6L115.34 184.21" stroke="#D07F2C" stroke-width="1.4" stroke-miterlimit="10" stroke-linecap="round"/>
-                            <path d="M118.59 184.03C121.85 178.61 123.11 178.03 125.83 178.79" stroke="#D07F2C" stroke-width="1.4" stroke-miterlimit="10" stroke-linecap="round"/>
-                            <path d="M110.46 154.2C114.07 158.36 113.71 161.79 111 165.59C110.17 166.75 109.08 168.33 110.92 169.06C113.706 170.314 116.624 171.25 119.62 171.85C123.34 172.42 129.39 172.7 132.33 169.75C134.87 167.22 138.12 166.13 140.33 167.58C142.54 169.03 142.5 172.1 143.04 174.63C143.58 177.16 145.04 181.32 145.04 181.32" stroke="#D07F2C" stroke-width="1.4" stroke-miterlimit="10" stroke-linecap="round"/>
-                            <path d="M106.13 161.61C107.39 164.51 111.01 165.61 111.01 165.61" stroke="#D07F2C" stroke-width="1.4" stroke-miterlimit="10" stroke-linecap="round"/>
-                            <path d="M115.34 167.58C116.334 165.381 118.058 163.593 120.22 162.52" stroke="#D07F2C" stroke-width="1.4" stroke-miterlimit="10" stroke-linecap="round"/>
-                            <path d="M0.530029 115.85C21.36 113.57 27.04 105.62 33.86 107.51C40.68 109.4 41.43 114.33 45.6 115.51C49.77 116.69 46.92 112.51 44.46 109.26C42 106.01 43.46 104.14 49.57 108.69C49.57 97.69 63.97 87.86 67.19 86.53C70.41 85.2 70.79 87.86 68.51 90.32C68.51 90.32 51.85 98.84 53.17 111.15C63.17 107.55 66.81 110.4 66.81 110.4C68.43 111.4 70.66 107.85 72.28 103.98" stroke="#D07F2C" stroke-width="1.4" stroke-miterlimit="10"/>
-                            <path d="M22.87 163.76C27.61 168.3 37.27 171.34 41.62 171.15C45.97 170.96 45.42 183.08 45.62 185.54L52.81 185.35C52.39 182 50.81 178.65 51.09 175.22C51.36 172.05 53.57 169.86 55.56 167.61C58.14 164.71 61.28 161.78 63.3 158.46C66.12 153.82 65.05 147.74 63.77 142.78C63.6654 142.458 63.628 142.117 63.66 141.78C63.7454 141.458 63.9238 141.169 64.1728 140.949C64.4219 140.728 64.7305 140.586 65.06 140.54C68.24 139.97 72.06 142 75.12 142.65C81.21 143.92 89.43 146.09 93.76 140.21C93.9889 139.945 94.144 139.624 94.21 139.28C94.37 137.75 91.28 136.84 90.21 136.23C86.0674 133.694 82.2894 130.605 78.98 127.05C76.6 124.55 73.75 122.14 72.29 118.94C70.71 115.48 72.67 112.18 74.22 109.14C78.35 101.05 78.44 93.05 77.79 84.19C77.79 83.85 77.66 83.42 77.32 83.38C77.1739 83.3846 77.032 83.4296 76.91 83.51C74.25 85.13 74.43 88.51 74.37 91.2C74.313 95.5174 73.6085 99.8017 72.28 103.91" stroke="#D07F2C" stroke-width="1.4" stroke-miterlimit="10" stroke-linecap="round"/>
-                            <path d="M75.93 161.43C77.55 157.27 78.82 156.91 76.47 154.38C75.0466 152.813 74.1057 150.869 73.76 148.78" stroke="#D07F2C" stroke-width="1.4" stroke-miterlimit="10" stroke-linecap="round"/>
-                            <path d="M78.13 149.91L79.75 152.26" stroke="#D07F2C" stroke-width="1.4" stroke-miterlimit="10" stroke-linecap="round"/>
-                            <path d="M68.51 159.81C70.86 157.46 71.23 166.13 76.65 165.23C82.07 164.33 84.06 164.87 85.33 167.94C86.6 171.01 87.86 175.35 86.77 177.89" stroke="#D07F2C" stroke-width="1.4" stroke-miterlimit="10" stroke-linecap="round"/>
-                            <path d="M89.49 169.39C89.49 166.5 90.75 167.94 94.73 168.12C98.71 168.3 100.15 169.21 101.6 167.22" stroke="#D07F2C" stroke-width="1.4" stroke-miterlimit="10" stroke-linecap="round"/>
-                            <path d="M0.650024 90.26C64.28 99.35 80.57 50.87 101.78 56.55C122.99 62.23 141.55 49.74 144.58 49.74" stroke="#D07F2C" stroke-width="1.4" stroke-miterlimit="10"/>
-                            <path d="M5.38 193.91C80.95 171.76 76.89 200.41 131.89 204.26C184.31 207.94 220.16 194.79 227.84 190.35" stroke="#D07F2C" stroke-width="1.4" stroke-miterlimit="10" stroke-linecap="round"/>
-                            </g>
-                            <defs>
-                            <clipPath id="clip0_2:128">
-                            <rect width="228.54" height="229.66" fill="white"/>
-                            </clipPath>
-                            </defs>
-                            </svg>
-                            <svg width="229" height="230" viewBox="0 0 229 230" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M228.12 1H1V229.26H228.12V1Z" fill="#E8C197" stroke="#D07F2C" stroke-width="1.4" stroke-miterlimit="10"/>
-                                </svg>
-                                <svg width="1440" height="900" viewBox="0 0 1440 900" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <g clip-path="url(#clip0_2:129)">
-                                    <rect width="1440" height="900" fill="white"/>
-                                    <path d="M1440 -28H0V900H1440V-28Z" fill="#E8C197"/>
-                                    </g>
-                                    <defs>
-                                    <clipPath id="clip0_2:129">
-                                    <rect width="1440" height="900" fill="white"/>
-                                    </clipPath>
-                                    </defs>
-                                    </svg>                                                        
+                      </svg>
                 </section>
     <script type="module" src="js/scripts-min.js"></script>
 </body>
